adds new locale (input:close-console)

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -5,3 +5,7 @@ c7:chat_accessibility:enable=__1__Enable__2__
 
 [mod-setting-description]
 [string-mod-setting]
+
+# controls
+[controls]
+c7:chat_accessibility:prototypes:input:close-console=Close chat (and Lua console)
