fixes, changes and additions * mod name + debug print + chat background + zoom input events ~ misc

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,11 +1,11 @@
 # settings
 # __1__ and __2__ enable richtext formatting
 [mod-setting-name]
-c7:chat_accessibility:enable=__1__Enable__2__
+c7:chat-accessibility:enable=__1__Enable__2__
 
 [mod-setting-description]
 [string-mod-setting]
 
 # controls
 [controls]
-c7:chat_accessibility:prototypes:input:close-console=Close chat (and Lua console)
+c7:chat-accessibility:prototypes:input:close-console=Close chat (and Lua console)
